packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_mixins.scss
/* ... */
@mixin generate_spacing($args) {
  $responsive_key: list.nth($args, 1);
  $hover_key: list.nth($args, 2);

  @each $key, $property-map in $spacing-utilities {
    @each $selector, $property in map.get($property-map, 'properties')
    {
      @if (map.get($property-map, 'has-negative') == false) {
        @each $spacing-key, $spacing-map in $spacing-range {
          @if ($spacing-key >= 0) {
            $spacing-selector: map.get($spacing-map, 'selector');
            $spacing-prefix: map.get($spacing-map, 'prefix');
            $spacing-value: map.get($spacing-map, 'value');
            #{$responsive_key + $spacing-prefix + $selector + $spacing-selector} {
              @if meta.type-of($property) == 'list' {
                @each $prop in $property {
                  #{$prop}: $spacing-value;
                }
              } @else {
                #{$property}: $spacing-value;
              }
            }

            @if ($hover_key != ''){
              #{$responsive_key + $hover_key + $spacing-prefix + $selector + $spacing-selector}:hover {
                @if meta.type-of($property) == 'list' {
                  @each $prop in $property {
                    #{$prop}: $spacing-value;
                  }
                } @else {
                  #{$property}: $spacing-value;
                }
              }
            }
          }
        }
      } @else {
        @each $spacing-key, $spacing-map in $spacing-range {
          $spacing-selector: map.get($spacing-map, 'selector');
          $spacing-prefix: map.get($spacing-map, 'prefix');
          $spacing-value: map.get($spacing-map, 'value');
          #{$responsive_key + $spacing-prefix + $selector + $spacing-selector} {
            @if meta.type-of($property) == 'list' {
              @each $prop in $property {
                #{$prop}: $spacing-value;
              }
            } @else {
              #{$property}: $spacing-value;
            }
          }

          @if ($hover_key != ''){
            #{$responsive_key + $hover_key + $spacing-prefix + $selector + $spacing-selector}:hover {
              @if meta.type-of($property) == 'list' {
                @each $prop in $property {
                  #{$prop}: $spacing-value;
                }
              } @else {
                #{$property}: $spacing-value;
              }
            }
          }
        }
      }
    }
  }
}

$mixin_list: (
  'generate_utilities',
  'generate_opacity',
  'generate_position',
  'generate_width_height',
  'generate_width_height_sizing',
  'generate_transition_duration',
  'generate_border_width',
  'generate_colors',
  'generate_spacing'
);

@mixin generate_mixins($responsive_key: false, $hover_key: true) {
  @each $element in $mixin_list {
    @include meta.apply(
      meta.get-mixin($element),
      (
        if($responsive_key, #{'.' + $responsive_key + '\\:'}, '.'),
        if($hover_key, 'hover\\:', '')
      )
    );
  }
}

